Added a timeout to the resize function to try to avoid excessive method calls. Also added some CSS trickery to try to solve stream queue clipping bug.
Added html5 parameter to all stream iframes.

Due to recent bug with ember.js, added a check for an environment variable called 'OMIT_CHAT'. When 'true', the chat iframe will load with no src.

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -257,7 +257,7 @@ select option {
 
         // Menu
         &:nth-child(3) {
-            flex: 1 1 auto;
+            flex: 0 0 auto;
             padding: 0 5px 0 5px;
         }
     }
@@ -286,6 +286,10 @@ select option {
     &:hover {
         cursor: pointer;
     }
+}
+
+.prelative {
+    position: relative;
 }
 
 ::-webkit-scrollbar {
