Added a new environment variable, 'OMIT_CHAT_THRESHOLD', which tempers the range of streamers for which the chat omission occurs. When nil, the default of 4 is used.

--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -33,7 +33,7 @@
                     <option value="<%= streamer['name'] %>"><%= streamer['name'] %></option>
                 <% end %>
             </select>
-            <iframe id="chat_embed" scrolling="no" src="<%= ENV['OMIT_CHAT'] == 'true' ? '' : "https://twitch.tv/#{ @streamers.first['name'] }/chat" %>"></iframe>
+            <iframe id="chat_embed" scrolling="no" src="<%= ENV['OMIT_CHAT'] == 'true' && @streamers.count > (ENV['OMIT_CHAT_THRESHOLD'] || 4) ? '' : "https://twitch.tv/#{ @streamers.first['name'] }/chat" %>"></iframe>
         </div>
     </div>
     <div id="stream-queue" class="flex_row">
@@ -270,8 +270,8 @@
         var resize_throttle;
         // Whenever the window resizes, re-size on-deck streams to maintain aspect ratio.
         $( window ).resize( function () {
-            clearTimeout(resize_throttle);
-            resize_throttle = setTimeout(resize_ondeck_streams(), 250);
+            clearTimeout( resize_throttle );
+            resize_throttle = setTimeout( resize_ondeck_streams(), 250 );
         } );
 
         // Resize the on-deck streams at startup to maintain aspect ratio.
