--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -256,7 +256,11 @@
 
     // Swap a different chat window whenever the drop-down box changes.
     $( '#chat-changer' ).change( function () {
+        <% if ENV['OMIT_CHAT'] == true && @streamers.count > (ENV['OMIT_CHAT_THRESHOLD'] || 4) %>
         $( '#chat_embed' )[ 0 ].src = 'https://twitch.tv/' + $( '#chat-changer option:selected' ).text() + '/chat';
+        <% else %>
+        alert( "Chat is currently omitted due to a bug in Twitch's API. To chat, open a new tab and visit http://www.twitch.tv/" + $( '#chat-changer option:selected' ).text() + '/chat' );
+        <% end %>
     } );
 
     // Set up an interval to update stream layouts on the page every 5 seconds.
@@ -309,6 +313,10 @@
             $( '#chat-changer' ).css( 'display', 'none' );
         }
     }
+
+    <% if ENV['OMIT_CHAT'] == true && @streamers.count > (ENV['OMIT_CHAT_THRESHOLD'] || 4) %>
+        alert( "Chat is currently omitted due to a bug in Twitch's API. To chat, open a new tab and visit http://www.twitch.tv/" + streamers[ 0 ][ 'name' ] + '/chat' );
+    <% end %>
 </script>
 </body>
 </html>
