--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -106,7 +106,9 @@
         if ( $( 'iframe#main-stream-player' )[ 0 ].src !== get_player_url( streamers[ 0 ][ 'name' ], false ) ) {
             console.log( "Main streamer went offline. Loading a new main streamer." );
             document.getElementById( 'main-stream-player' ).src = get_player_url( streamers[ 0 ][ 'name' ], false );
+            <% unless ENV['OMIT_CHAT'] == 'true' && @streamers.count > ENV['OMIT_CHAT_THRESHOLD'].to_i %>
             document.getElementById( 'chat_embed' ).src = 'https://twitch.tv/' + streamers[ 0 ][ 'name' ] + '/chat';
+            <% end %>
             streams_changed = true;
         }
 
@@ -246,8 +248,8 @@
         $( '.on-deck-stream' ).height( height + 'px' );
 
         // Trigger a style recalculation
-        $('body').css('display', 'table').height();
-        $('body').css('display', 'block');
+        $( 'body' ).css( 'display', 'table' ).height();
+        $( 'body' ).css( 'display', 'block' );
     }
 
     // Swap a different chat window whenever the drop-down box changes.
@@ -309,7 +311,7 @@
     }
 
     <% if ENV['OMIT_CHAT'] == 'true' && @streamers.count > ENV['OMIT_CHAT_THRESHOLD'].to_i %>
-        alert( "Chat is currently omitted due to a bug in Twitch's API. To chat, open a new tab and visit http://www.twitch.tv/" + streamers[ 0 ][ 'name' ] + '/chat' );
+    alert( "Chat is currently omitted due to a bug in Twitch's API. To chat, open a new tab and visit http://www.twitch.tv/" + streamers[ 0 ][ 'name' ] + '/chat' );
     <% end %>
 </script>
 </body>
