Added sharing buttons to the menu. Also updated links to highlight white instead of blue, and to remain purple even when visited.
Also fixed a bug where the chat switcher if statement was backwards.

Finally, added compatibility with local config yml file in the application.rb file.

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -5,6 +5,14 @@
 // ====== //
 a {
     color: $light-purple;
+
+    &:visited {
+        color: $light-purple;
+    }
+
+    &:hover {
+        color: white;
+    }
 }
 
 span {
