Added property to <html> tag.

--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -1,4 +1,4 @@
-<html itemscope itemtype="http://schema.org/Website">
+<html property itemscope itemtype="http://schema.org/Website">
 <% content_for :head do %>
     <title>TwitchDeck</title>
     <%= render 'partials/google_analytics_init' %>
