--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
-<html property itemscope itemtype="http://schema.org/Website">
+<html>
 <head>
     <title>TwitchDeck</title>
     <%= render 'partials/google_analytics_init' %>
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-
-    <!-- Facebook Tags -->
-    <meta property="og:title" content="TwitchDeck - the Smarter Stream Player"/>
-    <meta property="og:description" content="Watch multiple Twitch.tv streamers at once. Let TwitchDeck make sure there's always something to watch, and manage the volume. Just sit back and enjoy, free and right in your browser."/>
-
-    <!-- Google+ Tags -->
-    <meta itemprop="name" content="TwitchDeck - The Smarter Stream Player"/>
-    <meta itemprop="description" content="Watch multiple Twitch.tv streamers at once. Let TwitchDeck make sure there's always something to watch, and manage the volume. Just sit back and enjoy, free and right in your browser."/>
 </head>
 <body class="noscroll">
 <div id="main-container">
