Made menu bigger. Added large text size variable.

--- a/app/assets/stylesheets/_menu.scss
+++ b/app/assets/stylesheets/_menu.scss
@@ -1,5 +1,8 @@
+@import 'variables';
+
 .menu {
     text-align: right;
+    font-size: $text-large;
 }
 
 #theater_mode_toggle.theater_mode_active {
