--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,5 +1,9 @@
+// Colors
 $light-purple: #815FC0 !global;
 $purple: #6441A5 !global;
 $dark-purple: #4B307B !global;
 $dark-gray: #737373 !global;
 $abyss: #111111 !global;
+
+// Font sizes
+$text-large: 1.3em !global;
