--- a/app/views/partials/_menu.erb
+++ b/app/views/partials/_menu.erb
@@ -1,3 +1,10 @@
 <div class="menu">
-    BETA - <a class="facebook" id="facebook_share" title="Share on Facebook" href="https://www.facebook.com/sharer/sharer.php?u=" target="_blank"><i class="fa fa-facebook-square"></i></a> <a class="twitter" id="twitter_share" title="Tweet about TwitchDeck" href="https://twitter.com/intent/tweet?" target="_blank"><i class="fa fa-twitter-square"></i></a> <a id="google_plus_share" title="Share on Google+" href="https://plus.google.com/share?url=" target="_blank"><i class="fa fa-google-plus-square"></i></a> - <a id="theater_mode_toggle" class="pointer" title="Display only the main stream, with a shrunken chat panel.">Theater Mode</a> - <a id="hide_chat_toggle" class="pointer">Hide Chat</a> - <%= link_to 'Help', root_path %>
+    BETA -
+    <a class="facebook" id="facebook_share" title="Share on Facebook" href="https://www.facebook.com/sharer/sharer.php?u=" target="_blank"><i class="fa fa-facebook-square"></i></a>
+    <a class="twitter" id="twitter_share" title="Tweet about TwitchDeck" href="https://twitter.com/intent/tweet?" target="_blank"><i class="fa fa-twitter-square"></i></a>
+    <a id="google_plus_share" title="Share on Google+" href="https://plus.google.com/share?url=" target="_blank"><i class="fa fa-google-plus-square"></i></a>
+    <a id="pinterest_share" title="Pin this TwitchDeck" href="http://pinterest.com/pin/create/button/?" class="pin-it-button" count-layout="horizontal" target="_blank"><i class="fa fa-pinterest-square"></i></a>
+    - <a id="theater_mode_toggle" class="pointer" title="Display only the main stream, with a shrunken chat panel.">Theater Mode</a>
+    - <a id="hide_chat_toggle" class="pointer">Hide Chat</a>
+    - <%= link_to 'Help', root_path %>
 </div>
