Changed site structure - the index is now a simple page that gives instructions on how to use TwitchDeck, as well as a link to an example. The "help" link that used to link to the index now links to a "help" page (a refactoring of the index page). Finally, the player is now accessible by going to <host>/player/<streamers>. As an effect, the "demo" action and link have been removed from the now-help page.
Also - fixed a bug where exiting Theater Mode would leave on-deck streams cut off at the bottom.

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -126,6 +126,12 @@ select option {
     }
 }
 
+#landing_container {
+    font-size: $text-large;
+    text-align: center;
+    vertical-align: middle;
+}
+
 #main-container {
     min-height: 100%;
     display: flex;
