--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -1,36 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>TwitchDeck - Welcome!</title>
-        <%= render 'partials/google_analytics_init' %>
-    </head>
-    <body>
-        <div style="margin: 0 10% 0 10%;">
-            <h1>Welcome to the TwitchDeck Beta!</h1>
-            <h3>What is TwitchDeck?</h3>
-            <p>A web application that lets you watch multiple Twitch streams on the same page, at the same time. TwitchDeck displays a "primary" streamer in a larger player, with your other streamers displayed below in smaller players, with volume turned down by default.</p>
-            <p>For a demo of the app in action, click <%= link_to 'here', demo_path %>.</p>
-
-            <h3>How does it work?</h3>
-            <p>After entering your preferred priority of streamers, TwitchDeck will put the first online streamer in the main player, in the center of the screen, with the audio set to max. Next, TwitchDeck will place any remaining online streams, in order, in the subway bar under the main player with the volume turned off. Finally, offline streams will be placed behind them.</p>
-
-            <h3>How do I use it?</h3>
-            <p>Enter the names of the streamers you'd like to watch, in order of priority. For instance: <b>twitch-deck.herokuapp.com/day9tv&covert_muffin&kinggothalion</b> will display <a href="http://www.twitch.tv/day9tv">Day[9]</a>'s stream in the main player, with <a href="http://www.twitch.tv/covert_muffin">Covert_Muffin</a>'s and <a href="http://www.twitch.tv/kinggothalion">KingGothalion</a>'s streams below it. TwitchDeck will order the streams on-page first by whether they're online or offline, then by the priority you specify.</p>
-            <p>In this example, once Day[9]'s stream goes offline, TwitchDeck will check the other two streams, and if either are online, it will take the main stream over and move Day[9]'s stream to the deck.</p>
-
-            <h3>Where can I get updates, request features, or report a problem?</h3>
-            <p>Check out the TwitchDeck subreddit at <%= link_to 'r/twitchdeck', 'http://www.reddit.com/r/twitchdeck' %></p>
-
-            <h1>Terms of Service</h1>
-            <p><b>Last updated November 29, 2015.</b></p>
-            <p>TwitchDeck is provided free-of-charge for general use, does not collect any personal information or login credentials, and is subject to all of the terms of service of Twitch's embedded video players and chat.</p>
-            <p>TwitchDeck will be open-source once it leaves beta status. When this occurs, you are welcome to create your own fork of TwitchDeck.</p>
-
-            <h1 id="privacy-policy">Privacy Policy</h1>
-            <p><b>Last updated December 4, 2015.</b></p>
-            <p>TwitchDeck makes use of the widely-used Google Analytics product to aggregate web site usage data, and as such, is subjected to all of Google's terms and conditions of use, including the use of cookies.</p>
-            <p>Google Analytics does not collect personal information about site visitors, as noted in their documentation <%= link_to 'here', 'https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage' %>. Specifically:</p>
-            <blockquote cite="https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage">Important: Google Analytics does not store any personal information about your website users. Read the Google Analytics privacy document for more details.</blockquote>
-        </div>
-    </body>
-</html>
+<div id="landing_container">
+    <p style="text-align: center; vertical-align: middle;">Welcome to TwitchDeck!</p>
+    <p style="text-align: center; vertical-align: middle;">Ready to get started?</p>
+    <p style="text-align: center; vertical-align: middle;">In your URL bar above, type
+        in <%= ENV['CANONICAL_HOST'] || 'localhost:3000' %>/player/ followed by
+        <strong>the streamers you want to watch, separated by '&' characters</strong>.</p>
+    <p style="text-align: center; vertical-align: middle;">For example:
+        <a href="<%= @example_link_href %>"><%= @example_link_href %></a></p>
+</div>
