--- a/app/views/partials/_menu.erb
+++ b/app/views/partials/_menu.erb
@@ -17,5 +17,5 @@
     </a>
     - <a id="theater_mode_toggle" class="pointer" title="Display only the main stream, with a shrunken chat panel.">Theater Mode</a>
     - <a id="hide_chat_toggle" class="pointer">Hide Chat</a>
-    - <%= link_to 'Help', root_path %>
+    - <%= link_to 'Help', help_path, target: '_blank' %>
 </div>
