Fixed route. Updated example link in landing page to grab a few live streamers in the user's locale. Centered the text in the landing page.

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -301,6 +301,17 @@ select option {
     margin-right: 0;
 }
 
+.centered-modal {
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
 .flex_wrap {
     flex-wrap: wrap;
 }
