--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -1,11 +1,14 @@
-<div id="landing_container">
-    <div class="centered-modal">
-        <p style="text-align: center; vertical-align: middle;">Welcome to TwitchDeck!</p>
-        <p style="text-align: center; vertical-align: middle;">Ready to get started?</p>
-        <p style="text-align: center; vertical-align: middle;">In your URL bar above, type
-            in <%= ENV['CANONICAL_HOST'] || 'localhost:3000' %>/player/ followed by
-            <strong>the streamers you want to watch, separated by '&' characters</strong>.</p>
-        <p style="text-align: center; vertical-align: middle;">For example:
-            <a href="<%= @example_link_href %>"><%= @example_link_href %></a></p>
+<body>
+<div>
+    <div class="Aligner">
+        <div class="Aligner-item Aligner-item--fixed box">
+            Welcome to TwitchDeck!<br>
+            Ready to get started?<br>
+            In your URL bar above, type in <%= ENV['CANONICAL_HOST'] || 'localhost:3000' %>/player/ followed by
+            <strong>the streamers you want to watch, separated by '&' characters</strong>.<br>
+            Here's an example:<br>
+            <a href="<%= @example_link_href %>"><%= @example_link_href %></a>
+        </div>
     </div>
 </div>
+</body>
