--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -4,8 +4,8 @@
     <div class="landing-box">
         Welcome to TwitchDeck!<br>
         Ready to get started?<br>
-        In your URL bar above, type in <%= ENV['CANONICAL_HOST'] || 'localhost:3000' %>/player/ followed by
-        <strong>the streamers you want to watch, separated by '&' characters</strong>.<br>
+        In your URL bar above, type in <strong><%= ENV['CANONICAL_HOST'] || 'localhost:3000' %>/player/</strong>
+        followed by <strong>the streamers you want to watch, separated by '&' characters</strong>.<br>
         Here's an example:<br>
         <a id="demo-link" href="<%= @example_link_href %>"><%= @example_link_href %></a>
     </div>
