--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -319,7 +319,8 @@ select option {
     background-color: $dark-purple;
     border: 10px solid $purple;
     flex: 0 0 auto;
-    width: 50%;
+    min-width: 50%;
+    max-width: 100%;
     margin: auto;
     overflow-wrap: break-word;
 }
